package com.dev.alan.patterns.structural.composite;

public interface FileSystemComponent {

    String showDetails();

}
